--- a/SayMyTime/Base.lproj/Main.storyboard
+++ b/SayMyTime/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,18 +14,14 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SayMyTime" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00 AM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1f-Q8-nDS">
-                                <rect key="frame" x="12.5" y="254" width="296.5" height="60"/>
+                                <rect key="frame" x="13" y="264" width="294.5" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="o1f-Q8-nDS" secondAttribute="height" multiplier="74:15" id="6Gf-GQ-9BT"/>
+                                    <constraint firstAttribute="width" constant="294.5" id="xLS-7d-oDe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -34,9 +30,10 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="o1f-Q8-nDS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EkV-BK-3aK"/>
-                            <constraint firstItem="o1f-Q8-nDS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wr4-hG-eSc"/>
+                            <constraint firstItem="o1f-Q8-nDS" firstAttribute="centerY" secondItem="tYh-bM-GVf" secondAttribute="centerY" id="cjk-bh-IbG"/>
+                            <constraint firstItem="o1f-Q8-nDS" firstAttribute="centerX" secondItem="tYh-bM-GVf" secondAttribute="centerX" id="rW0-Z9-5jX"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="tYh-bM-GVf"/>
                     </view>
                     <connections>
                         <outlet property="timeLabel" destination="o1f-Q8-nDS" id="sU0-Tu-dsd"/>
